--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo-min.png" sizes="16x16 32x32 48x48">
+    <link rel="icon" href="/favicon.ico" sizes="16x16 32x32 48x48">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sparkling Stars</title>
   </head>
